<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
    	 
    	 android:layout_marginTop="100dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
   		android:layout_alignParentLeft="true"
    	android:layout_marginTop="202dp"
    	android:layout_marginLeft="10dp"
        
        android:text="@string/folks"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:layout_marginTop="230dp"
    	android:layout_marginLeft="5dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
    	android:layout_alignParentLeft="true"
    	android:layout_marginTop="330dp"
    	android:layout_marginLeft="20dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
    	
    	android:layout_marginTop="24dp"
    	 />

    <TextView
        android:id="@+id/rateourapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
    	
    	android:layout_marginTop="0dp"
        android:text="@string/rate_our_app"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

</RelativeLayout>
